src/features/debugger/components/toolbar/debugger-toolbar.module.scss
@use "libs/theme/styles/variables" as *;
@use "libs/theme/styles/mixins" as *;

.toolbar {
  @include Container
}

.toolbarWrapper {
  @include ExtendedGrid;
}

.toolbarContent {
  display: flex;
  flex-direction: column;
  gap: 16px;
  padding: 24px;
  border-top: 0.5px solid var(--color_border_light);
  color: var(--color_fg_link);

  @media #{$breakpoint-dimension-sm} {
    flex-direction: row;
    gap: 0;
    margin: 4rem 2rem 0px;
    padding: 2rem;
    justify-content: space-between;
    align-items: center;
  }

  :global(.react-select-container) {
    width: 100%;

    @media #{$breakpoint-dimension-sm} {
      width: auto;
    }
  }

  :global(.react-select__control) {
    min-height: 44px !important;
    height: auto !important;
    padding: 12px 8px !important;
    flex: 1 !important;
  }

  :global(.react-select__value-container) {
    height: auto !important;
  }

  :global(.react-select__indicators) {
    height: auto !important;
  }
}

.toolbarTitle {
  font-size: 14px;
  font-style: normal;
  line-height: 20px;
  font-weight: 500;
  letter-spacing: 1.5px;
  text-transform: uppercase;
  color: var(--color_fg_default);
}

.toolbarOptionsContainer {
  display: flex;
  flex-direction: column;
  gap: 16px;
  width: 100%;

  @media #{$breakpoint-dimension-sm} {
    flex-direction: row;
    gap: 32px;
    width: auto;
  }

  p {
    font-size: 14px;
    font-style: normal;
    font-weight: 400;
    line-height: 20px;
    letter-spacing: 0.15px;
  }
}

.toolbarSeparatorLine {
  border-top: 1px solid var(--color_border_light);
  width: 100%;

  @media #{$breakpoint-dimension-sm} {
    border-top: none;
    border-left: 1px solid var(--color_border_light);
    width: auto;
    height: auto;
    align-self: stretch;
  }
}

.toolbarButtonContainer {
  display: flex;
  flex-direction: row;
  gap: 8px;
  align-items: center;
  cursor: pointer;
  background: transparent;
  border: 0px;

  p {
    color: var(--color_fg_link);
    font-weight: 500;
    letter-spacing: 0.28px;
  }

  svg {
    path {
      stroke: var(--color_fg_link);
    }
  }
}

